feat: add navbar spacing on content and adjust offcanvas width

--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
       <div class="container">
         <!-- Features Section -->
 
-        <section class="row my-5" id="our-services">
+        <div class="nav-spacer" id="our-services"></div>
+        <section class="row">
           <div class="col-lg-6 text-center">
             <img
               src="./assets/images/img_service.svg"
@@ -157,7 +158,8 @@
 
         <!-- Why Us Section -->
 
-        <section class="my-5" id="why-us">
+        <div class="nav-spacer" id="why-us"></div>
+        <section class="my-5">
           <div class="text-center">
             <h2>Why Us?</h2>
             <p>Mengapa harus pilih Binar Car Rental?</p>
@@ -213,7 +215,8 @@
 
         <!-- Testimonial Section -->
 
-        <section class="my-5" id="testimonial">
+        <div class="nav-spacer" id="testimonial"></div>
+        <section class="my-5">
           <div class="text-center">
             <h2>Testimonial</h2>
             <p>Berbagai review positif dari para pelanggan kami</p>
@@ -346,7 +349,8 @@
 
         <!-- FAQ Section -->
 
-        <section class="my-5 row" id="faq">
+        <div class="nav-spacer" id="faq"></div>
+        <section class="my-5 row">
           <div class="col-lg-6">
             <div class="text-center">
               <h2>Frequently Asked Questions</h2>
